# NewbeeToy

./: Cargo.toml  LICENSE  README.md  USAGE.md  build.rs
assets/lang/: en.json  zh.json
src/: main.rs  main.slint
src/core/: config.rs  lang.rs  mod.rs
src/core/general/: mod.rs  rename.rs  rename.slint  unlock.rs  unlock.slint
src/core/media/: icon.rs  icon.slint
src/core/system/: env.rs  env.slint
