[package]
name = "NewbeeToy"
version = "1.0.1"
edition = "2024"

[dependencies]
slint = { version = "1.16.0", features = ["raw-window-handle-06"] }
rfd = "0.17.2"
regex = "1.12.3"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"
raw-window-handle = "0.6.2"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_RestartManager", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.56.0"

[build-dependencies]
winres = "0.1.12"
slint-build = "1.16.0"